feat(api): add dbcontext  and identity to services in program cs.

--- a/CleanCrud.Api/appsettings.json
+++ b/CleanCrud.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=CHICKEN-WINGS\\NEWSQLSERVER;Database=CleanCrud;User Id=CleanUser;Password=Clean.123;TrustServerCertificate=true;"
+  }
 }
