--- a/CleanCrud.Api/CleanCrud.Api.csproj
+++ b/CleanCrud.Api/CleanCrud.Api.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\CleanCrud.Presistence\CleanCrud.Presistence.csproj" />
   </ItemGroup>
 
 </Project>
