--- a/CleanCrud.Api/CleanCrud.Api.csproj
+++ b/CleanCrud.Api/CleanCrud.Api.csproj
@@ -7,12 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\src\CleanCrud.Application\CleanCrud.Application.csproj" />
     <ProjectReference Include="..\src\CleanCrud.Presistence\CleanCrud.Presistence.csproj" />
   </ItemGroup>
 
