--- a/src/CleanCrud.Application/CleanCrud.Application.csproj
+++ b/src/CleanCrud.Application/CleanCrud.Application.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Auth\Commands\" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
   </ItemGroup>
 
 </Project>
