--- a/CleanCrud.Api/appsettings.json
+++ b/CleanCrud.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=CHICKEN-WINGS\\NEWSQLSERVER;Database=CleanCrud;User Id=CleanUser;Password=Clean.123;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=CHICKEN-WINGS\\NEWSQLSERVER;Database=CleanCrud;User Id=CleanLogin;Password=Clean.123;TrustServerCertificate=true;"
   }
 }
