--- a/src/CleanCrud.Application/CleanCrud.Application.csproj
+++ b/src/CleanCrud.Application/CleanCrud.Application.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanCrud.Domain\CleanCrud.Domain.csproj" />
   </ItemGroup>
 
 </Project>
