feat(presistence): implement user repository in presistence layer.

--- a/src/CleanCrud.Presistence/CleanCrud.Presistence.csproj
+++ b/src/CleanCrud.Presistence/CleanCrud.Presistence.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CleanCrud.Application\CleanCrud.Application.csproj" />
     <ProjectReference Include="..\CleanCrud.Domain\CleanCrud.Domain.csproj" />
   </ItemGroup>
 
