--- a/src/CleanCrud.Application/CleanCrud.Application.csproj
+++ b/src/CleanCrud.Application/CleanCrud.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
