--- a/src/CleanCrud.Infrastructure/CleanCrud.Infrastructure.csproj
+++ b/src/CleanCrud.Infrastructure/CleanCrud.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanCrud.Application\CleanCrud.Application.csproj" />
+  </ItemGroup>
+
 </Project>
